adding dataprocessing files

--- a/sanity-check/example-evaluation-method/Dockerfile
+++ b/sanity-check/example-evaluation-method/Dockerfile
@@ -1,5 +1,4 @@
-FROM --platform=linux/amd64 pytorch/pytorch AS example-algorithm-amd64
-# Use a 'large' base container to show-case how to load pytorch and use the GPU (when enabled)
+FROM --platform=linux/amd64 docker.io/library/python:3.11-slim AS example-evaluation-amd64
 
 # Ensures that Python output to stdout/stderr is not buffered: prevents missing information when terminating
 ENV PYTHONUNBUFFERED=1
@@ -11,7 +10,6 @@ WORKDIR /opt/app
 
 COPY --chown=user:user requirements.txt /opt/app/
 COPY --chown=user:user resources /opt/app/resources
-COPY --chown=user:user model /opt/app/model
 
 # You can add any Python dependencies to requirements.txt
 RUN python -m pip install \
@@ -20,6 +18,10 @@ RUN python -m pip install \
     --no-color \
     --requirement /opt/app/requirements.txt
 
-COPY --chown=user:user inference.py /opt/app/
+COPY --chown=user:user helpers.py /opt/app/
+COPY --chown=user:user evaluate.py /opt/app/
 
-ENTRYPOINT ["python", "inference.py"]
+# Setting this will limit the number of workers used by the evaluate.py
+ENV GRAND_CHALLENGE_MAX_WORKERS=
+
+ENTRYPOINT ["python", "evaluate.py"]
